# tau

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  README.md  SECURITY.md  TODO.txt  flake.nix
.agents/skills/tau-debugging/: SKILL.md
config/: cli.ncl  cli.yaml  harness.json5  harness.ncl  harness.yaml  models.json5
crates/tau/: Cargo.toml
crates/tau-agent/: Cargo.toml
crates/tau-agent/src/: common.rs  lib.rs  openai.rs  responses.rs  tests.rs
crates/tau-agent/src/common/: tests.rs
crates/tau-agent/src/openai/: tests.rs
crates/tau-agent/src/responses/: pool.rs  tests.rs  ws.rs  ws_runtime.rs
crates/tau-blocking-notify-channel/: Cargo.toml  README.md
crates/tau-cli/: AGENTS.md  Cargo.toml  README.md  design.md
crates/tau-cli-picker/: AGENTS.md  ARCHITECTURE.md  README.md
crates/tau-cli-term/: AGENTS.md  ARCHITECTURE.md  Cargo.toml
crates/tau-cli-term-raw/: README.md
crates/tau-config/: AGENTS.md  ARCHITECTURE.md  Cargo.toml
crates/tau-core/: Cargo.toml
crates/tau-core/src/: action_registry.rs  agent_store.rs  lib.rs  policy.rs  session.rs  session_store.rs  tests.rs  tool_registry.rs
crates/tau-core/src/action_registry/: tests.rs
crates/tau-core/src/session_store/: tests.rs
crates/tau-e2e-tests/: Cargo.toml
crates/tau-e2e-tests/src/: lib.rs
crates/tau-e2e-tests/tests/: shell.rs
crates/tau-ext-dpc-notifications/: Cargo.toml  README.md
crates/tau-ext-email/: Cargo.toml  README.md
crates/tau-ext-pim/: AGENTS.md  Cargo.toml  README.md
crates/tau-ext-provider-builtin/: AGENTS.md
crates/tau-ext-provider-chat-completions/: Cargo.toml
crates/tau-ext-provider-openai/: Cargo.toml
crates/tau-ext-rhai/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
crates/tau-ext-shell/: AGENTS.md  ARCHITECTURE.md  Cargo.toml
crates/tau-ext-std-notifications/: AGENTS.md  Cargo.toml  README.md
crates/tau-ext-test-dummy/: AGENTS.md
crates/tau-ext-websearch/: AGENTS.md
crates/tau-ext-websearch-exa/: README.md
crates/tau-harness/: ARCHITECTURE.md  Cargo.toml
crates/tau-harness-tools/: Cargo.toml
crates/tau-harness-tools/src/: lib.rs  tests.rs
crates/tau-proto/: AGENTS.md  ARCHITECTURE.md  Cargo.toml
crates/tau-provider/: Cargo.toml
crates/tau-provider-chat-completions/: Cargo.toml
crates/tau-provider-chatgpt/: Cargo.toml
crates/tau-supervisor/: AGENTS.md  ARCHITECTURE.md
crates/tau-test-support/: Cargo.toml
docs/: agent-messaging.md  agent-roles.md  agents-rework.md  cli-keybindings.md  events.md  harness-agent-item-architecture.md  harness-agent-item-types.md  messages.md  providers.md  shell-locking.md  skills.md
nix/: cargo-crap-baseline.json
site/: index.html
(+288 files in other folders)
