[package]
name = "tau-agent"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Exposes `run_echo`, an in-process echo agent used by the test suites
# of downstream crates. Disabled by default so the production binary
# doesn't carry the fixture and the public API surface stays narrow.
echo-agent = []

[dependencies]
backon.workspace = true
base64.workspace = true
blake3.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-config.workspace = true
tau-extension.workspace = true
tau-proto.workspace = true
tau-provider.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
ureq.workspace = true

[dev-dependencies]
# Sync `tungstenite` is only used by pool/server-side test fixtures
# that spin up a fake Codex acceptor in a background thread.
# Production code talks to the upstream via `tokio-tungstenite`.
tungstenite.workspace = true
