[package]
name = "tau-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ciborium.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-proto.workspace = true

[dev-dependencies]
tempfile.workspace = true
