[package]
name = "tau-harness-tools"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
tau-harness.workspace = true
tau-proto.workspace = true
tau-skills.workspace = true
